--- a/04_REACT_PROPS_PROJECT/src/index.css
+++ b/04_REACT_PROPS_PROJECT/src/index.css
@@ -8,27 +8,27 @@
 body{
   width: 100%;
   height: 100%;
+  /* color: white; */
+  background-color: #111;
 }
 
 .parent{
-  height: 100vh;
-  width: 100vw;
   background-color: #111;
   padding: 30px;
   display: flex;
   gap: 20px;
+  flex-wrap: wrap;
 }
 
-.card{
+.card {
   height: 350px;
   width: 300px;
-  background-color: #ffffff;
+  background: linear-gradient(135deg, #e0e0e0 0%, #9ea3a6 100%);
   border-radius: 30px;
   padding: 20px;
   display: flex;
   flex-direction: column;
-  justify-content: space-between ;
-
+  justify-content: space-between;
 }
 
 .card .top{
