--- a/11_REACT_FORM-HANDLING/src/index.css
+++ b/11_REACT_FORM-HANDLING/src/index.css
@@ -21,6 +21,19 @@ button{
     cursor: pointer;
 }
 
+input{
+  padding: 10px;
+  margin: 10px;
+  border-radius: 5px;
+  border: none;
+  display: block;
+  width: 20%;
+  margin-left: 20px;
+  margin-top: 20px;
+  font-size: 10px;
+  color: #000;
+}
+
 h1{
   background-color: #6e5c5c;
   font-size: 20px;
